[package]
name = "patch_test_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
patch_test_crate_two = { git = "https://github.com/zancas/patch_test_crate_two.git" }

[patch.crates-io]
libc = { git = "https://github.com/zancas/libc" }